fix: Make homepage actually work on mobile lmao

--- a/sass/home_page.scss
+++ b/sass/home_page.scss
@@ -6,12 +6,18 @@ $max_width: 42em;
     text-align: center;
 }
 
+.container {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
 .sect-div {
     display: flex;
     flex-flow: column wrap;
     justify-content: center;
     align-items: center;
-    object-fit: contain;
+    width: inherit;
 
     padding: 0;
     margin: 0;
@@ -19,30 +25,38 @@ $max_width: 42em;
 }
 
 .info {
-    width: $max_width * 1.1;
+    width: 100%;
+    box-sizing: border-box;
+
+    @media (min-width: 768px) {
+        max-width: $max_width;
+        width: 1.1 * $max_width;
+    }
+
     padding: 1.4em;
     display: grid;
     grid-template-columns: auto auto;
+    gap: 0.2em;
     background-color: $tertiary-container;
     border-radius: 1.4em;
+}
 
-    .left {
-        .section-header {
-            font-size: 2em;
-            color: $tertiary-container-text;
-        }
-
-        display: flex;
-        flex-direction: column;
-        grid-column: 1;
-        align-self: center;
+.left {
+    .section-header {
+        font-size: 2em;
+        color: $tertiary-container-text;
     }
 
-    .right {
-        grid-column: 2;
-        margin-left: auto;
-        align-self: center;
-    }
+    display: flex;
+    flex-direction: column;
+    grid-column: 1;
+    align-self: center;
+}
+
+.right {
+    grid-column: 2;
+    margin-left: auto;
+    align-self: center;
 }
 
 .recent {
@@ -57,12 +71,13 @@ $max_width: 42em;
         width: 100%;
         max-width: $max_width; // completely arbitrary but looks fine i guess lmao
     }
-
-    @media (max-width: 768px) {
-        max-width: 90%;
-    }
 }
+
 .soon {
+    max-width: 95%;
     text-align: center;
-    padding: 8em;
+    padding: 8em 0;
+    margin: 0;
+    word-wrap: break-word;
+
 }
