--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -32,6 +32,7 @@ em {
 html {
     font-family: "cantarell", system-ui, sans-serif;
     color: $text;
+    box-sizing: border-box;
 }
 
 body {
